# wokgl

./: .gitignore  CMakeLists.txt
apps/sph/: Drawer.cpp  Drawer.hpp  HistoPyramid.cpp  HistoPyramid.hpp  ParticleGrid.cpp  ParticleGrid.hpp  ParticleSimulator.cpp  ParticleSimulator.hpp  particle.cpp  particle.h  particle.hpp  sph_main.cpp  utils.cpp  utils.hpp
apps/sph/gpu/: commonVert.glsl  dots.glsl  grid.cl  histo.cl  meta.glsl  radius.glsl  simulation.cl
shaders/: test_framebuffer.frag  test_normalmapping.frag  test_normalmapping.vert
src/: test_compute.cpp  test_framebuffer.cpp  test_normalmap.cpp
src/common/: Logger.cpp  Logger.hpp  MainLogger.cpp  MainLogger.hpp  Singleton.hpp
src/compute/: Buffer.cpp  Buffer.hpp  CommandQueue.cpp  CommandQueue.hpp  Commands.cpp  Commands.hpp  Context.cpp  Context.hpp  Device.cpp  Device.hpp  Kernel.cpp  Kernel.hpp  Platform.cpp  Platform.hpp  Program.cpp  Program.hpp  compute.hpp  enums.hpp  gl.cpp  gl.hpp
src/renderer/: ActiveTextureManager.cpp  ActiveTextureManager.hpp  Buffer.cpp  Buffer.hpp  Debug.cpp  Debug.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  enums.hpp  renderer.hpp
